[package]
name = "cargo-tanker"
version = "0.1.0"
edition = "2021"
authors = ["OdinSrc"]
repository = "https://github.com/OdinSrc/cargo-tanker.git"
keywords = ["project", "structure", "create-project", "folder-structure"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
readme = "README.md"
license-file = "LICENSE.txt"
description = "Crate to create great project structure for Rust"


[[bin]]
name = "cargo-tanker"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive", "cargo"] }
